Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8067792/T8067792.out
T8067792.java:13:37: compiler.warn.potential.lambda.found
- compiler.err.warnings.and.werror
1 error
1 warning
